[tool.poetry]
name = "scratch-llm"
version = "0.1.0"
description = ""
authors = ["Jefferson Hernandez <jeffersonh44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
